--- a/FamousFolks/Views/Folks/Index.cshtml
+++ b/FamousFolks/Views/Folks/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FamousFolks.Models.Folk>
+﻿@model IEnumerable<FamousFolks.Models.FolksListViewModel>
 
 @{
     ViewBag.Title = "Index";
