--- a/FamousFolks/Views/Folks/Index.cshtml
+++ b/FamousFolks/Views/Folks/Index.cshtml
@@ -43,7 +43,7 @@
     <input type="search" name="searchTerm" />
     <input type="submit" Value="Search By Name" class="btn btn-primary"/>
     
-    <label class="checkbox-inline">
+    <label class="checkbox">
         <input type="checkbox" id="expertise" value="expertise">Politics
     </label>
 
@@ -65,6 +65,7 @@
         <th>
             @Html.DisplayNameFor(model => model.BirthLocation)
         </th>
+        
         <th id="myBioh" style="display:none">
             @Html.DisplayNameFor(model => model.Bio)
         </th>
@@ -83,6 +84,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.BirthLocation)
         </td>
+        
         <td id="myBio" style="display: none">
             @Html.DisplayFor(modelItem => item.Bio)
         </td>
